# traxgen

./: .cursorrules  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: PLAN.md
docs/refs/: README.md  agentic-workflow-notes.md  layer-kinds-and-world-coords.md  pro-structural-notes.md  pro-vertical-starter-set-26832.md  rail-specs.md  tile-tree-node-index.md  tree-node-height-semantics.md  upload-api.md
docs/refs/starter-set-manual/: README.md
scripts/: dump_minimal_course.py  fetch_fixtures.py  probe_baseplate_arrangement.py  probe_meta.py  probe_retainer_references.py  probe_stackers.py  probe_tile_index.py  probe_tile_index_dupes.py  render_course.py  sweep_side_hex_rot.py  trace_both.py  upload_course.py
tests/: test_generator.py  test_hex.py  test_inventory.py  test_parser.py  test_serializer.py  test_uploader.py  test_validator.py
tests/fixtures/: GDZJZA3J3T.bom.json  GDZJZA3J3T.course  GDZJZA3J3T.dump.txt
tests/fixtures/oracle/: 4YCV8JHLX7.course  X3WEQ6F296.course
traxgen/: _diff.py  _dump_format.py  android.py  domain.py  generator.py  hex.py  inventory.py  parser.py  serializer.py  types.py  uploader.py  validator.py
