[project]
name = "traxgen"
version = "0.0.1"
description = "Procedural generator for GraviTrax marble run courses"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "s3mi0tics" }]
keywords = ["gravitrax", "marble-run", "procedural-generation", "hex-grid"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = []

[project.urls]
Repository = "https://github.com/s3mi0tics/traxgen"
Issues = "https://github.com/s3mi0tics/traxgen/issues"

[project.scripts]
traxgen = "traxgen.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "mypy>=1.8",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --- Linting / formatting ---

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # naming
    "UP",  # pyupgrade
    "B",   # bugbear
    "C4",  # comprehensions
    "SIM", # simplify
    "RUF", # ruff-specific
]

# --- Testing ---

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-m",
    "not network",
]
markers = [
    "integration: integration tests, may be slow",
    "network: tests that hit external APIs (murmelbahn, etc.); skipped by default",
]
# Skip network tests by default; override with `pytest -m network` or `pytest -m ""`
# to run everything.

# --- Type checking ---

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
